--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,30 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-  
+
 jobs:
+  android:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        api-level: [29]
+        target: [playstore]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.8.1'
+          channel: 'stable'
+
+      # Run integration test
+      - name: Run Flutter Driver tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          target: ${{ matrix.target }}
+          api-level: ${{ matrix.api-level }}
+          arch: x86_64
+          profile: Nexus 6
+          script: flutter test integration_test/app_test.dart
   ios:
     runs-on: macos-latest
     steps:
@@ -24,5 +46,5 @@ jobs:
       - run: flutter pub get
       - uses: futureware-tech/simulator-action@v2
         with:
-            model: 'iPhone 8'
+          model: 'iPhone 8'
       - run: flutter test integration_test/app_test.dart
