--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,10 @@ jobs:
         with:
           flutter-version: '2.10.2'
           channel: 'stable'
-      - run: flutter config --enable-macos-desktop
-      - run: flutter doctor -v
-      - run: flutter pub get
-      - uses: reactivecircus/android-emulator-runner@v2
+
+      # Run integration test
+      - name: Run Flutter Driver tests
+        uses: reactivecircus/android-emulator-runner@v2
         with:
           target: ${{ matrix.target }}
           api-level: ${{ matrix.api-level }}
