--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        api-level: 29
+        api-level: [29]
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
