--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
     strategy:
       matrix:
         api-level: [29]
+        target: [playstore]
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
@@ -27,6 +28,10 @@ jobs:
           arch: x86_64
           profile: Nexus 6
           script: flutter test integration_test/app_test.dart
+      - run: flutter build appbundle --flavor trasa_prod --target lib/main_trasa_prod.dart --debug
+      - run: flutter build appbundle --flavor autohiver_prod --target lib/main_autohiver_prod.dart --debug
+
+
   ios:
     runs-on: macos-latest
     steps:
@@ -47,3 +52,5 @@ jobs:
         with:
           model: 'iPhone 8'
       - run: flutter test integration_test/app_test.dart
+      - run: flutter build ios --flavor trasa_prod --target lib/main_trasa_prod.dart --no-codesign
+      - run: flutter build ios --flavor autohiver_prod --target lib/main_autohiver_prod.dart --no-codesign
