--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,7 @@ jobs:
           channel: 'stable'
       - run: flutter doctor -v
       - run: flutter pub get
-      - run: flutter build appbundle --flavor trasa_prod --target lib/main_trasa_prod.dart --debug
-      - run: flutter build appbundle --flavor autohiver_prod --target lib/main_autohiver_prod.dart --debug
+      - run: flutter build appbundle --debug
       - name: Run Flutter Driver tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -48,8 +47,7 @@ jobs:
       - run: flutter config --enable-macos-desktop
       - run: flutter doctor -v
       - run: flutter pub get
-      - run: flutter build ios --flavor trasa_prod --target lib/main_trasa_prod.dart --no-codesign
-      - run: flutter build ios --flavor autohiver_prod --target lib/main_autohiver_prod.dart --no-codesign
+      - run: flutter build ios --no-codesign
       - uses: futureware-tech/simulator-action@v2
         with:
           model: 'iPhone 8'
